# rust-axum-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  flake.nix
crates/server/: Cargo.toml
crates/server/src/: config.rs  lib.rs  route.rs  server.rs
src/: main.rs
